--- a/outgauge/Cargo.toml
+++ b/outgauge/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "insim_core"
+name = "outgauge"
+description = "LiveForSpeed Outgauge implementation that focuses on ergonomics and strong typing"
 version.workspace = true
+authors.workspace = true
 edition.workspace = true
-description = """
-Core types and traits for the insim crate.
-"""
-repository.workspace = true
 rust-version.workspace = true
 license.workspace = true
 homepage.workspace = true
+
+[lib]
+bench = false
+doctest = false
 
 [lints]
 workspace = true
@@ -17,17 +19,16 @@ workspace = true
 all-features = true
 rustdoc-args = ["--cfg", "docrs"]
 
-[lib]
-bench = false
-doctest = false
+[features]
+default = []
+serde = [
+  "dep:serde",
+  "insim_core/serde",
+  "bitflags/serde",
+]
 
 [dependencies]
 bitflags = { workspace = true }
 bytes = { workspace = true }
-encoding_rs = { workspace = true }
-if_chain = { workspace = true }
-insim_macros = { path = "../insim_macros", version = "3.0.0-unreleased" }
-itertools = { workspace = true }
-num-traits = { workspace = true }
+insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
 serde = { workspace = true, features = ["derive"], optional = true }
-thiserror = { workspace = true }
