--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ members = [
   "insim_pth",
   "insim_smx",
   "outgauge",
+  "outsim",
   "examples/*",
 ]
 # Only check / build main crates by default (check all with `--workspace`)
-default-members = ["insim", "insim_*", "outgauge"]
+default-members = ["insim", "insim_*", "outgauge", "outsim"]
 resolver = "2"
 
 [workspace.package]
