--- a/outsim/Cargo.toml
+++ b/outsim/Cargo.toml
@@ -28,5 +28,6 @@ serde = [
 
 [dependencies]
 bytes = { workspace = true }
+bitflags = { workspace = true }
 insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
 serde = { workspace = true, features = ["derive"], optional = true }
