--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ syn = { version = "2" }
 thiserror = "2.0.12"
 tokio = { version = "1.11.0" }
 tokio-test = "0.4.0"
-tokio-tungstenite = { version = "0.24.0" }
+tokio-tungstenite = { version = "0.26.2" }
+tungstenite = { version = "0.26.2" }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17" }
