--- a/examples/simple-blocking/Cargo.toml
+++ b/examples/simple-blocking/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 [dependencies]
 clap = { workspace = true, features = ["derive"] }
 if_chain = { workspace = true }
-insim = { path = "../../insim", default-features = false, features = ["blocking", "relay"] }
+insim = { path = "../../insim", default-features = false, features = ["blocking"] }
 tabled = "0.19.0"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
