--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -20,27 +20,21 @@ all-features = true
 rustdoc-args = ["--cfg", "docrs"]
 
 [features]
-default = ["tokio", "blocking", "relay"]
-relay = []
-blocking = []
+default = ["tokio", "blocking"]
+blocking = [
+  "dep:tungstenite",
+]
 tokio = [
   "dep:tokio",
+  "dep:tungstenite",
+  "dep:tokio-tungstenite",
+  "dep:futures-util"
 ]
 serde = [
   "dep:serde",
   "insim_core/serde",
   "bitflags/serde",
   "indexmap/serde",
-]
-tokio-websocket = [
-  "relay",
-  "tokio",
-  "dep:tokio-tungstenite",
-  "futures-util"
-]
-blocking-websocket = [
-  "relay",
-  "dep:tungstenite",
 ]
 
 [dependencies]
