--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -35,6 +35,7 @@ serde = [
   "insim_core/serde",
   "bitflags/serde",
   "indexmap/serde",
+  "glam/serde",
 ]
 
 [dependencies]
@@ -48,8 +49,9 @@ serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
 tokio-tungstenite = { workspace = true, optional = true }
-tungstenite = { workspace = true, optional = true }
 tracing = { workspace = true }
+tungstenite = { workspace = true, optional = true }
+glam = { workspace = true }
 
 [dev-dependencies]
 tokio-test = { workspace = true }
