--- a/insim_pth/Cargo.toml
+++ b/insim_pth/Cargo.toml
@@ -21,5 +21,6 @@ rustdoc-args = ["--cfg", "docrs"]
 
 [dependencies]
 bytes = { workspace = true }
+glam = { workspace = true }
 insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
 thiserror = { workspace = true }
