--- a/insim_smx/Cargo.toml
+++ b/insim_smx/Cargo.toml
@@ -22,5 +22,6 @@ rustdoc-args = ["--cfg", "docrs"]
 
 [dependencies]
 bytes = { workspace = true }
+glam = { workspace = true }
 insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
 thiserror = { workspace = true }
