--- a/examples/simple-async/Cargo.toml
+++ b/examples/simple-async/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 clap = { workspace = true, features = ["derive"] }
 if_chain = { workspace = true }
 insim = { path = "../../insim", default-features = false, features = ["tokio"] }
+tabled = "0.19.0"
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
