--- a/insim_macros/Cargo.toml
+++ b/insim_macros/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "insim_macros"
+description = """
+Proc macros for insim_core
+"""
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
