--- a/examples/simple-outsim/Cargo.toml
+++ b/examples/simple-outsim/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-outsim"
-version.workspace = true
+version = "0.1.0-unreleased"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
