--- a/examples/live-delta/Cargo.toml
+++ b/examples/live-delta/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "live-delta"
-version.workspace = true
+version = "0.1.0-unreleased"
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
