--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "insim"
 description = "LiveForSpeed Insim implementation that focuses on ergonomics and strong typing"
-version.workspace = true
+version = "3.0.0-unreleased"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
