--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "insim_core"
-version.workspace = true
+version = "3.0.0-unreleased"
 edition.workspace = true
 description = """
 Core types and traits for the insim crate.
@@ -27,7 +27,7 @@ bytes = { workspace = true }
 encoding_rs = { workspace = true }
 glam = { workspace = true }
 if_chain = { workspace = true }
-insim_macros = { path = "../insim_macros", version = "3.0.0-unreleased" }
+insim_macros = { path = "../insim_macros", version = "0.1.0-unreleased" }
 itertools = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
