--- a/outsim/Cargo.toml
+++ b/outsim/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "outsim"
 description = "LiveForSpeed Outsim implementation that focuses on ergonomics and strong typing"
-version.workspace = true
+version = "0.1.0-unreleased"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
