--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "insim"
 description = "LiveForSpeed Insim implementation that focuses on ergonomics and strong typing"
-version = "3.0.0-unreleased"
+version = "3.0.0"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -44,7 +44,7 @@ bytes = { workspace = true }
 from_variants = { workspace = true }
 futures-util = { workspace = true, optional = true }
 indexmap = { workspace = true }
-insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
+insim_core = { path = "../insim_core", version = "3.0.0" }
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
