--- a/insim_pth/Cargo.toml
+++ b/insim_pth/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "insim_pth"
-version = "3.0.0-unreleased"
+version = "3.0.0"
 edition.workspace = true
 description = "Insim PTH file implementation"
 rust-version.workspace = true
@@ -22,5 +22,5 @@ rustdoc-args = ["--cfg", "docrs"]
 [dependencies]
 bytes = { workspace = true }
 glam = { workspace = true }
-insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
+insim_core = { path = "../insim_core", version = "3.0.0" }
 thiserror = { workspace = true }
