--- a/insim_smx/Cargo.toml
+++ b/insim_smx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "insim_smx"
-version = "3.0.0-unreleased"
+version = "3.0.0"
 edition.workspace = true
 description = "Insim SMX file implementation"
 rust-version.workspace = true
@@ -23,5 +23,5 @@ rustdoc-args = ["--cfg", "docrs"]
 [dependencies]
 bytes = { workspace = true }
 glam = { workspace = true }
-insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
+insim_core = { path = "../insim_core", version = "3.0.0" }
 thiserror = { workspace = true }
