--- a/outgauge/Cargo.toml
+++ b/outgauge/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "outgauge"
 description = "LiveForSpeed Outgauge implementation that focuses on ergonomics and strong typing"
-version = "0.1.0-unreleased"
+version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -30,5 +30,5 @@ serde = [
 [dependencies]
 bitflags = { workspace = true }
 bytes = { workspace = true }
-insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
+insim_core = { path = "../insim_core", version = "3.0.0" }
 serde = { workspace = true, features = ["derive"], optional = true }
