--- a/outsim/Cargo.toml
+++ b/outsim/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "outsim"
 description = "LiveForSpeed Outsim implementation that focuses on ergonomics and strong typing"
-version = "0.1.0"
+version = "0.1.1"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -23,8 +23,9 @@ rustdoc-args = ["--cfg", "docrs"]
 default = []
 serde = [
   "dep:serde",
-  "insim_core/serde",
+  "bitflags/serde",
   "glam/serde",
+  "insim_core/serde",
 ]
 
 [dependencies]
