--- a/insim/Cargo.toml
+++ b/insim/Cargo.toml
@@ -32,18 +32,20 @@ serde = [
   "indexmap/serde",
   "glam/serde",
 ]
+python = ["dep:pyo3"]
 
 [dependencies]
 bitflags = { workspace = true }
 bytes = { workspace = true }
 from_variants = { workspace = true }
+glam = { workspace = true }
 indexmap = { workspace = true }
 insim_core = { path = "../insim_core", version = "3.0.0" }
+pyo3 = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
 tracing = { workspace = true }
-glam = { workspace = true }
 
 [dev-dependencies]
 tokio-test = { workspace = true }
