--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "insim_smx",
   "outgauge",
   "outsim",
+  "py-insim",
   "examples/*",
 ]
 exclude = ['examples/*']
@@ -45,6 +46,7 @@ indexmap = "2.1.0"
 itertools = { version = "0.14.0" }
 num-traits = "0.2.19"
 proc-macro2 = "1"
+pyo3 = "0.25.1"
 quote = "1"
 serde = { version = "1.0.188" }
 syn = { version = "2" }
