--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -9,10 +9,12 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+eyre = "0.6.12"
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
+rand = "0.9.2"
 serde = { workspace = true, features = ["derive"] }
-toml = "0.9.5"
+serde_norway = "0.9.42"
 
 [lints]
 workspace = true
