--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ bytes = "1.4.0"
 clap = { version = "4.2" }
 darling = "0.21"
 encoding_rs = { version = "0.8.32" }
+fixedbitset = "0.5.7"
 from_variants = "1.0.2"
 glam = "0.30.3"
 if_chain = "1.0.2"
