--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -9,9 +9,13 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-insim = { path = "../insim", version = "4.0.0", features = ["blocking"] }
+async-trait = "0.1.89"
 fixedbitset = { workspace = true }
+insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
 taffy = "0.9.1"
+tokio = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
