--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -9,10 +9,11 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-async-trait = "0.1.89"
+async-trait = { workspace = true }
 fixedbitset = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
 taffy = "0.9.1"
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt"] }
 tokio-util = "0.7.16"
 tracing = { workspace = true }
