--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -9,15 +9,11 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-async-trait = { workspace = true }
 fixedbitset = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
 taffy = "0.9.1"
-thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt"] }
-tokio-util = "0.7.16"
-tracing = { workspace = true }
-if_chain = { workspace = true }
+# if_chain = { workspace = true }
 
 [lints]
 workspace = true
