--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -9,17 +9,18 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-eyre = "0.6.12"
-if_chain = { workspace = true }
+# eyre = "0.6.12"
+# if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
-rand = "0.9.2"
-serde = { workspace = true, features = ["derive"] }
-serde_norway = "0.9.42"
+# rand = "0.9.2"
+# serde = { workspace = true, features = ["derive"] }
+# serde_norway = "0.9.42"
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"]}
-tracing = {workspace = true}
-tracing-subscriber = {workspace = true}
-async-trait = {workspace = true}
+# tracing = {workspace = true}
+# tracing-subscriber = {workspace = true}
+# async-trait = {workspace = true}
+anyhow = "*"
 
 [lints]
 workspace = true
