--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,5 +54,7 @@ syn = { version = "2" }
 thiserror = "2.0.12"
 tokio = { version = "1.11.0" }
 tokio-test = "0.4.0"
+tokio-util = "0.7.16"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17" }
+futures = "0.3"
