--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -11,6 +11,7 @@ homepage.workspace = true
 [dependencies]
 fixedbitset = { workspace = true }
 if_chain = { workspace = true }
+indexmap = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
 taffy = "0.9.1"
 tokio = { workspace = true, features = ["rt"] }
