--- a/examples/twenty_second_league/config.yaml
+++ b/examples/twenty_second_league/config.yaml
@@ -1,16 +1,16 @@
 iname: "insim.rs/20sl"
 addr: "172.24.64.1:29999"
 admin: "123!"
-tick_rate: 64
-warmup_duration_minutes: 5
-game_duration_minutes: 1
-total_rounds: 20
+warmup_duration: 5
+rounds: 5
 
-combo:
+combos:
   - name: "FE1X_20s_cup"
     track: "FE1X"
     layout: "20s_cup"
     laps: 1
+    target_time: 20
+    restart_after: 10
     vehicles:
       - XRT
       - XRG
