--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -14,6 +14,7 @@ homepage.workspace = true
 # tracing = {workspace = true}
 # tracing-subscriber = {workspace = true}
 anyhow = "*"
+humantime-serde = "1.1.1"
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
 rand = "0.9.2"
