--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -14,6 +14,7 @@ indexmap = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
 taffy = "0.9.1"
 tokio = { workspace = true, features = ["rt"] }
+kitcar_macros = { path = "../kitcar_macros", version = "*" }
 
 [lints]
 workspace = true
