--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -10,11 +10,11 @@ homepage.workspace = true
 
 [dependencies]
 # async-trait = {workspace = true}
-# if_chain = { workspace = true }
 # tracing = {workspace = true}
 # tracing-subscriber = {workspace = true}
 anyhow = "*"
 humantime-serde = "1.1.1"
+if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
 rand = "0.9.2"
