--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,9 @@ itertools = { version = "0.14.0" }
 num-traits = "0.2.19"
 proc-macro2 = "1"
 quote = "1"
+rand = "0.9.2"
 serde = { version = "1.0.188" }
+serde_norway = "0.9.42"
 syn = { version = "2" }
 thiserror = "2.0.12"
 tokio = { version = "1.11.0" }
