--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -17,10 +17,10 @@ humantime-serde = "1.1.1"
 if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
-rand = "0.9.2"
 serde = { workspace = true, features = ["derive"] }
-serde_norway = "0.9.42"
+serde_norway = { workspace = true }
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"]}
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [lints]
 workspace = true
