--- a/examples/twenty_second_league/config.yaml
+++ b/examples/twenty_second_league/config.yaml
@@ -1,16 +1,12 @@
-iname: "insim.rs/20sl"
-addr: "172.24.64.1:29999"
-admin: "123!"
+iname: "CadenceCup"
+addr: "188.122.74.156:53321"
+admin: "rFcGByyvRevV"
 warmup_duration: 5mins
-rounds: 5
 
 combos:
-  - name: "FE1X_20s_cup"
-    track: "FE1X"
+  - track: FE1X
     layout: "20s_cup"
-    laps: 1
     target_time: 20s
     restart_after: 10s
-    vehicles:
-      - XRT
-      - XRG
+    rounds: 5
+    allowed_vehicles: []
