--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -10,13 +10,14 @@ homepage.workspace = true
 
 [dependencies]
 fixedbitset = { workspace = true }
+if_chain = { workspace = true }
 indexmap = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio", "serde"] }
 kitcar_macros = { path = "../kitcar_macros", version = "*" }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 taffy = "0.9.1"
-tokio = { workspace = true, features = ["rt"] }
+tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
 serde_norway = { workspace = true }
