--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -9,7 +9,9 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+async-trait = { workspace = true }
 fixedbitset = { workspace = true }
+futures = { workspace = true }
 if_chain = { workspace = true }
 indexmap = { workspace = true }
 insim = { path = "../insim", version = "4.0.0", features = ["tokio", "serde"] }
@@ -17,6 +19,7 @@ kitcar_macros = { path = "../kitcar_macros", version = "*" }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 taffy = "0.9.1"
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
