--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -17,6 +17,7 @@ kitcar_macros = { path = "../kitcar_macros", version = "*" }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 taffy = "0.9.1"
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
