--- a/kitcar/Cargo.toml
+++ b/kitcar/Cargo.toml
@@ -19,6 +19,7 @@ serde = { workspace = true, features = ["derive"] }
 taffy = "0.9.1"
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync"] }
+tracing = { workspace = true }
 
 [dev-dependencies]
 serde_norway = { workspace = true }
