--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -9,8 +9,6 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-# tracing = {workspace = true}
-# tracing-subscriber = {workspace = true}
 anyhow = "*"
 humantime-serde = "1.1.1"
 if_chain = { workspace = true }
@@ -19,6 +17,7 @@ kitcar = { path = "../../kitcar" }
 serde = { workspace = true, features = ["derive"] }
 serde_norway = { workspace = true }
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal"]}
+tracing = {workspace = true}
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [lints]
