--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -10,12 +10,11 @@ homepage.workspace = true
 
 [dependencies]
 anyhow = "1.0.100"
-humantime-serde = "1.1.1"
 if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
-jiff = "0.2.15"
+jiff = { version = "0.2.15", features = ["serde"] }
 kitcar = { path = "../../kitcar" }
-rusqlite = { version = "0.37.0", features = ["bundled"] }
+rusqlite = { version = "0.37.0", features = ["bundled", "jiff"] }
 rusqlite_migration = "2.3.0"
 serde = { workspace = true, features = ["derive"] }
 serde_norway = { workspace = true }
