--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sign
 tokio-util = { workspace = true }
 tracing = {workspace = true}
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+from_variants = { workspace = true }
 
 [lints]
 workspace = true
