--- a/examples/twenty_second_league/config.yaml
+++ b/examples/twenty_second_league/config.yaml
@@ -1,25 +1,15 @@
 addr: "188.122.74.156:53321"
 admin: "rFcGByyvRevV"
 database: 20s.db
-lobby_duration: 2mins
+lobby_duration: 10s
 victory_duration: 5mins
-scores_by_position:
-  - 10
-  - 9
-  - 8
-  - 7
-  - 6
-  - 5
-  - 4
-  - 3
-  - 2
-  - 1
+max_scoring_players: 10
 
 combos:
-  - name: FE1X_20s
-    track: FE1X
+  - name: FE1Y_20s
+    track: FE1Y
     layout: 20s_cup
-    target_time: 20s
+    target_time: 30s
     restart_after: 1m10s
-    rounds: 5
+    rounds: 2
     allowed_vehicles: []
