--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ missing_debug_implementations = "deny"
 [workspace.lints.rustdoc]
 broken_intra_doc_links = "deny"
 
+# [workspace.lints.clippy]
+# unwrap_used = "deny"
+
 [workspace.dependencies]
 async-trait = "0.1.89"
 bitflags = "2.4.0"
