Add package rules for Cargo workspace dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["config:recommended"]
+  "extends": ["config:recommended"],
+  "packageRules": [
+    {
+      "matchManagers": ["cargo"],
+      "matchFileNames": ["Cargo.toml"],
+      "matchDepTypes": ["workspace.dependencies"],
+      "enabled": true,
+      "groupName": "workspace dependencies"
+    }
+  ]
 }
