--- a/examples/twenty_second_league/Cargo.toml
+++ b/examples/twenty_second_league/Cargo.toml
@@ -16,8 +16,7 @@ if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 jiff = { version = "0.2.15", features = ["serde"] }
 kitcar = { path = "../../kitcar" }
-rusqlite = { version = "0.37.0", features = ["bundled", "jiff"] }
-rusqlite_migration = "2.3.0"
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "time"] }
 serde = { workspace = true, features = ["derive"] }
 serde_norway = { workspace = true }
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal"]}
