--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -27,7 +27,7 @@ bytes = { workspace = true }
 encoding_rs = { workspace = true }
 glam = { workspace = true }
 if_chain = { workspace = true }
-insim_macros = { path = "../insim_macros", version = "0.1.0-unreleased" }
+insim_macros = { path = "../insim_macros", version = "0.2.0" }
 itertools = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
