test: fix up tests to handle new ObjectInfo structure. change Uco test to handle the invalid flags

--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -21,6 +21,14 @@ rustdoc-args = ["--cfg", "docrs"]
 bench = false
 doctest = false
 
+[features]
+default = []
+serde = [
+  "dep:serde",
+  "bitflags/serde",
+  "glam/serde",
+]
+
 [dependencies]
 bitflags = { workspace = true }
 bytes = { workspace = true }
