feat!(insim_pth): PIN file support. Support for multiple revisions of PTH file.

--- a/insim_pth/Cargo.toml
+++ b/insim_pth/Cargo.toml
@@ -20,6 +20,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docrs"]
 
 [dependencies]
+bitflags = { workspace = true }
 bytes = { workspace = true }
 glam = { workspace = true }
 insim_core = { path = "../insim_core", version = "4.0.0" }
