ci: split tests and docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,25 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Run cargo test
         run: cargo test --all --all-targets --all-features
+
+  docs:
+    runs-on: ubuntu-latest
+    needs: [pre-commit, test]
+    strategy:
+      matrix:
+        channel: [stable, nightly]
+    steps:
+      - uses: actions/checkout@v6
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.channel }}
+      - uses: Swatinem/rust-cache@v2
       - name: Run cargo doc
         run: cargo doc --no-deps
 
   msrv:
     runs-on: ubuntu-latest
-    needs: [pre-commit]
+    needs: [pre-commit, test]
     steps:
       - uses: actions/checkout@v6
       - name: Get MSRV from package metadata
