--- a/examples/marquee/Cargo.toml
+++ b/examples/marquee/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 anyhow = "1.0.86"
 clap = { workspace = true, features = ["derive"] }
 if_chain = { workspace = true }
-insim = { path = "../../insim" }
+insim = { path = "../../insim", features = ["tokio", "glam"] }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
