--- a/examples/live-delta/Cargo.toml
+++ b/examples/live-delta/Cargo.toml
@@ -10,6 +10,6 @@ publish = false
 clap = { workspace = true, features = ["derive"] }
 glam = { workspace = true }
 if_chain = { workspace = true }
-insim = { path = "../../insim", default-features = false, features = ["blocking"] }
+insim = { path = "../../insim", default-features = false, features = ["blocking", "glam"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
