--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -26,14 +26,17 @@ default = []
 serde = [
   "dep:serde",
   "bitflags/serde",
-  "glam/serde",
+  "glam?/serde",
+]
+glam = [
+  "dep:glam"
 ]
 
 [dependencies]
 bitflags = { workspace = true }
 bytes = { workspace = true }
 encoding_rs = { workspace = true }
-glam = { workspace = true }
+glam = { workspace = true, optional = true }
 if_chain = { workspace = true }
 insim_macros = { path = "../insim_macros", version = "0.2.0" }
 itertools = { workspace = true }
