--- a/examples/clockwork-carnage/Cargo.toml
+++ b/examples/clockwork-carnage/Cargo.toml
@@ -10,6 +10,7 @@ homepage.workspace = true
 
 [dependencies]
 anyhow = "1.0.100"
+insim = { path = "../../insim", features = ["serde", "blocking"] }
 rand = {workspace = true}
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "time", "sync"]}
 tracing = {workspace = true}
