--- a/examples/clockwork-carnage/Cargo.toml
+++ b/examples/clockwork-carnage/Cargo.toml
@@ -9,14 +9,14 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-anyhow = "1.0.100"
 clap = { workspace = true, features = ["derive"] }
+if_chain = { workspace = true }
 insim = { path = "../../insim", features = ["serde", "blocking"] }
 kitcar = { path = "../../kitcar" }
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "time", "sync"]}
 tracing = {workspace = true}
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-if_chain = { workspace = true }
 
 [lints]
 workspace = true
