refactor(kitcar_macros): use darling
Fixes #285

--- a/kitcar_macros/Cargo.toml
+++ b/kitcar_macros/Cargo.toml
@@ -12,6 +12,7 @@ homepage.workspace = true
 proc-macro = true
 
 [dependencies]
+darling = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
 
