perf: performance and correctness fixes, optimise [T; N]::decode to avoid an allocation, avoid allocation on codepage to_lossy_string, removes panic in codec and shutdown in InsimTask now actually cancels, remove Colour trait from pub visibility, Rename Colourify and ColourifyExt to Colour and ColourExt

--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -33,6 +33,7 @@ glam = [
 ]
 
 [dependencies]
+arrayvec = { workspace = true }
 bitflags = { workspace = true }
 bytes = { workspace = true }
 encoding_rs = { workspace = true }
@@ -40,4 +41,5 @@ glam = { workspace = true, optional = true }
 insim_macros = { path = "../insim_macros", version = "0.2.0" }
 itertools = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
+smallvec = { workspace = true }
 thiserror = { workspace = true }
