--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ broken_intra_doc_links = "deny"
 # unwrap_used = "deny"
 
 [workspace.dependencies]
+arrayvec = "0.7.6"
 bitflags = "2.10.0"
 bytes = "1.11.0"
 clap = { version = "4.5.56" }
@@ -51,6 +52,7 @@ itertools = { version = "0.14.0" }
 proc-macro2 = "1.0.106"
 quote = "1.0.44"
 serde = { version = "1.0.228" }
+smallvec = "1.15.1"
 syn = { version = "2.0.114" }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0" }
