--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ homepage = "https://github.com/theangryangel/insim.rs"
 [workspace.lints.rust]
 unsafe_code = "deny"
 missing_docs = "deny"
-unused_crate_dependencies = "deny"
+unused_crate_dependencies = "warn"
 unused_results = "deny"
 missing_debug_implementations = "deny"
 
@@ -41,6 +41,7 @@ arrayvec = "0.7.6"
 bitflags = "2.10.0"
 bytes = "1.11.0"
 clap = { version = "4.5.56" }
+criterion = { version = "0.5" }
 darling = "0.23.0"
 encoding_rs = { version = "0.8.35" }
 fixedbitset = "0.5.7"
