--- a/insim_core/Cargo.toml
+++ b/insim_core/Cargo.toml
@@ -18,7 +18,6 @@ all-features = true
 rustdoc-args = ["--cfg", "docrs"]
 
 [lib]
-bench = false
 doctest = false
 
 [features]
@@ -43,3 +42,10 @@ itertools = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 smallvec = { workspace = true }
 thiserror = { workspace = true }
+
+[dev-dependencies]
+criterion = { workspace = true, features = ["html_reports"] }
+
+[[bench]]
+name = "codepages"
+harness = false
