--- a/examples/prefabs/Cargo.toml
+++ b/examples/prefabs/Cargo.toml
@@ -11,7 +11,7 @@ clap = { workspace = true, features = ["derive"] }
 insim = { path = "../../insim", default-features = false, features = ["tokio", "serde"] }
 kitcar = { path = "../../kitcar" }
 serde = { workspace = true, features = ["derive"] }
-serde_yaml = "0.9"
+serde_norway = "0.9.42"
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
